--- a/src/app/styles/global/custom.scss
+++ b/src/app/styles/global/custom.scss
@@ -1,8 +1,15 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: $ff-roboto;
   font-size: $fz-default;
-  color: $color-default-black;
+  color: $color-eclipse;
+  background: $color-alice-blue;
   line-height: 18px;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
@@ -25,10 +32,18 @@ a {
 }
 
 .container {
-  width: 100%;
-  max-width: 1260px;
+  max-width: 1296px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0;
+  width: 100%;
+
+  @media (max-width: 1295px)  {
+    padding: 0 43px;
+  }
+
+  @media (max-width: 759px)  {
+    padding: 0 20px;
+  }
 }
 
 .visually-hidden {
@@ -42,4 +57,29 @@ a {
   border: 0;
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  margin: 15px 0;
+  max-width: 150px;
+  color: $color-default-white;
+  background: $color-navy-blue;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: $fz-default;
+  line-height: 18px;
+
+  cursor: pointer;
+  
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+    transition: opacity $trans-default;
+  }
 }
