--- a/src/entities/form/form.scss
+++ b/src/entities/form/form.scss
@@ -3,19 +3,7 @@
 .form {
   display: flex;
   flex-direction: column;
-
-  &__photo {
-    width: 200px;
-    height: 200px;
-    align-self: center;
-    margin-bottom: 30px;
-  }
-
-  &__photo-img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+  width: 60%;
+  margin: 0 auto 50px;
 
 }
