--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -10,14 +10,20 @@
   background: $color-gainsboro;
 
   &__link {
-    color: $color-default-black;
+    color: $color-eclipse;
     font-weight: 500;
+
+    &:hover,
+    &:focus {
+      color: #1976d2;
+      transition: color $trans-default;
+    }
   }
 }
 
 .footer {
-  background: $color-eclipse;
-  padding: 30px 0;
+  background: $color-gainsboro;
+  padding: 20px 30px;
   min-height: 50px;
   flex-shrink: 0;
   width: 100%;
@@ -25,5 +31,14 @@
 
 main {
   flex-grow: 1;
-  padding-top: 90px;
+  padding-top: 100px;
+}
+
+.main {
+  &__title {
+    margin: 0;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
 }
