--- a/src/pages/mainPage/users.scss
+++ b/src/pages/mainPage/users.scss
@@ -3,11 +3,41 @@
 .users {
   display: grid;
   grid-template-columns: 250px 1fr;
-  gap: 50px;
+  gap: 30px;
+  margin-bottom: 50px;
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, 310px);
     gap: 40px;
+    margin: 20px 0;
+  }
+
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+  }
+
+  &__btn {
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: $color-navy-blue;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+      transition: opacity $trans-default;
+    }
+  }
+  &__title {
+    color: $color-persian-red;
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
   }
 }
