--- a/src/app/styles/global/custom.scss
+++ b/src/app/styles/global/custom.scss
@@ -64,8 +64,9 @@ a {
   align-items: center;
   justify-content: center;
   align-self: center;
-  margin: 15px 0;
+  margin: 30px 0;
   max-width: 150px;
+  width: 100%;
   color: $color-default-white;
   background: $color-navy-blue;
   padding: 10px;
@@ -76,7 +77,7 @@ a {
   line-height: 18px;
 
   cursor: pointer;
-  
+
   &:hover,
   &:focus {
     opacity: 0.8;
