--- a/src/entities/sort/sort.scss
+++ b/src/entities/sort/sort.scss
@@ -5,12 +5,13 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
+  min-height: 37px;
 
   &__title {
     margin: 0;
     font-size: 18px;
     font-weight: 500;
-    color: $color-default-black
+    color: $color-default-black;
   }
 
   &__list {
@@ -24,7 +25,7 @@
     margin-right: 20px;
 
     &:last-child {
-    margin-right: 0;
+      margin-right: 0;
     }
   }
 
@@ -37,7 +38,7 @@
       color: #1976d2;
       transition: color $trans-default;
     }
-    
+
     &--active {
       color: #1976d2;
     }
