--- a/src/shared/input/inputPicture/input-picture.scss
+++ b/src/shared/input/inputPicture/input-picture.scss
@@ -1,22 +1,36 @@
 @import '../../../app/styles/index.scss';
 
 .photo {
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    &__wrapper {
-       margin-bottom: 20px;
-       width: 200px;
-        height: 200px;     
-    }
-    
-    &__img {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        object-fit: cover;
-    }
+  &__wrapper {
+    margin-bottom: 20px;
+    width: 200px;
+    height: 200px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  &__label {
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
+    letter-spacing: 0.02857em;
+    text-transform: uppercase;
+    min-width: 64px;
+    padding: 5px 15px;
+    border-radius: 4px;
+    border: 1px solid rgba(25, 118, 210, 0.5);
+    color: #1976d2;
+    cursor: pointer;
+  }
 }
